--- a/index.html
+++ b/index.html
@@ -103,6 +103,13 @@
             background-color: #66bb6a;
         }
 
+        button:disabled,
+        button[disabled]{
+          border: 1px solid #999999;
+          background-color: #cccccc;
+          color: #666666;
+        }
+
         #errorMessageId,
         #warningMessageId {
             padding: 10px;
