--- a/index.html
+++ b/index.html
@@ -142,6 +142,13 @@
             margin: 5px;
             border-radius: 8px;
         }
+
+        /* Extra small devices (phones, 600px and down) */
+        @media only screen and (max-width: 600px) {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
     </style>
 </head>
 
