--- a/index.html
+++ b/index.html
@@ -399,6 +399,9 @@
         }
 
         async function getData() {
+
+            return;
+            
             const url = "https://perenual.com/api/v2/species-list?key=sk-O4Vg68431f0dc1a5010877";
             try {
                 const response = await fetch(url);
