--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="author" content="Summer High School Institute Course on Cell Phone App Development">
     <meta name="description" content="Plant and flower application">
     <meta name="keywords" content="Plant, Flower, Environment">
+
+    <link rel="icon" type="image/x-icon" href="fav.ico">
       
     <title>Plant Watering App</title>
     <style>
