--- a/index.html
+++ b/index.html
@@ -148,6 +148,36 @@
             border-radius: 8px;
         }
 
+        .container
+        {
+            width: 320px;
+            height: 240px;
+            position: relative;
+        }
+        .container video
+        {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 320px;
+            height: 240px;
+            z-index: 1 !important;
+        }
+        .container .overlay
+        {
+            position: absolute;
+            top: 0;
+            left: 10px;
+            width: 100%;
+            z-index: 2;
+        }
+        .container .overlay h3
+        {
+            font-size: 1em;
+            color: #fff;
+            font-weight: bold;
+        }
+        
         /* Extra small devices (phones, 600px and down) */
         @media only screen and (max-width: 600px) {
           * {
@@ -186,7 +216,15 @@
     </div>
 
     <div id="CameraContent" class="tabcontent">
-        <video id="video" autoplay playsinline></video>
+        <div class="container">
+                <video id="video" autoplay playsinline controls></video>
+                Your browser does not support the video tag.
+            </video>
+            <div class="overlay">
+                <h3>Logo</h3>
+            </div>
+        </div>
+        
         <canvas id="canvas" style="display:none;"></canvas>
         <img id="photo" alt="Captured Photo">
         <button id="captureButton">Take Photo</button>
