--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         @media only screen and (max-width: 600px) {
           * {
           white-space: nowrap;
-          overflow: hidden;
+          overflow: scroll;
           text-overflow: ellipsis;
           }
         }
