--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
             margin-bottom: 15px;
         }
 
-        video,
         img {
             width: 100%;
             max-width: 320px;
@@ -91,6 +90,14 @@
             border: 1px solid #ccc;
         }
 
+        video {
+            width: 100%;
+            margin: 10px auto;
+            display: block;
+            border-radius: 12px;
+            border: 1px solid #ccc;
+        }
+        
         button {
             width: 100%;
             max-width: 320px;
