--- a/index.html
+++ b/index.html
@@ -92,10 +92,13 @@
 
         video {
             width: 100%;
+            height: 100vh;
             margin: 10px auto;
             display: block;
             border-radius: 12px;
             border: 1px solid #ccc;
+            object-fit: fill;
+            position: absolute;
         }
         
         button {
