--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         </div>
         
         <canvas id="canvas" style="display:none;"></canvas>
-        <img id="photo" alt="Captured Photo">
+        <img id="photo" alt="">
         <button id="captureButton">Take Photo</button>
         <button id="saveButton">Save Photo</button>
         <button id="deleteButton">Delete Photo</button>
