--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
     <meta name="author" content="Summer High School Institute Course on Cell Phone App Development">
     <meta name="description" content="Plant and flower application">
     <meta name="keywords" content="Plant, Flower, Environment">
