--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <h1>Welcome to the Plant Watering App</h1>
         <p>This app helps support plant care and reduce water waste.</p>
         <p>Developed in Summer 2025 as part of a two-week mobile app workshop.</p>
-        <br>
+        <img src="qrcode_se4cps.github.io.png" style="width: 50%" />
         <p>Want to contribute? Visit our open-source project on GitHub:</p>
         <p><a href="https://github.com/SE4CPS/PlantWateringCellPhoneApp/" target="_blank">GitHub Repository</a>
         </p>
