--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             background-color: #a1c9a1;
             font-size: 16px;
             color: #333;
+            touch-action: none;
         }
 
         header {
