--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
     <div id="GalleryContent" class="tabcontent">
         <div id="photosContainer"></div>
-        <button id="analyzeButton">Analyze Photo</button>
+        <button id="analyzeButton">Analyze Photo (TBD)</button>
     </div>
 
     <div id="DetailsContent" class="tabcontent">
