--- a/index.html
+++ b/index.html
@@ -381,7 +381,8 @@
                     detailsButton.innerHTML = 'Details &#128269;';
 
                     detailsButton.addEventListener('click', function() {
-                        console.log("TBD: Show image at the topic after...");
+                        console.log("TBD: Scale image on button click...");
+                        img.scale.transform = 'scale(3,3)'                       
                     });
 
                     img.src = photoData.image;
