--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 
                     detailsButton.addEventListener('click', function() {
                         console.log("TBD: Scale image on button click...");
-                        img.scale.transform = 'scale(3,3)'                       
+                        img.style.transform = 'scale(3,3)';                 
                     });
 
                     img.src = photoData.image;
