--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         @media only screen and (max-width: 600px) {
           * {
           white-space: nowrap;
-          overflow: scroll;
+          overflow-y: scroll;
           text-overflow: ellipsis;
           }
         }
