--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/x-icon" href="fav.ico">
       
     <title>Plant Watering App</title>
+
     <style>
         * {
             box-sizing: border-box;
@@ -189,9 +190,12 @@
         /* Extra small devices (phones, 600px and down) */
         @media only screen and (max-width: 600px) {
           * {
-          white-space: nowrap;
-          overflow-y: scroll;
-          text-overflow: ellipsis;
+                font-size: 10pt;
+              /*  
+                white-space: nowrap;
+                overflow-y: scroll;
+                text-overflow: ellipsis; 
+              */
           }
         }
     </style>
@@ -481,7 +485,7 @@
         });
 
         window.addEventListener('load', () => {
-            startCamera();
+            // startCamera();
             checkBatteryStatus();
             getData();
         });
