--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
         });
 
         window.addEventListener('load', () => {
-            // startCamera();
+            startCamera();
             checkBatteryStatus();
             getData();
         });
