--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
                     detailsButton.addEventListener('click', function() {
                         console.log("TBD: Scale image on button click...");
-                        img.style.transform = 'scale(3,3)';                 
+                        // img.style.transform = 'scale(3,3)';                 
                     });
 
                     img.src = photoData.image;
