--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
         @media only screen and (max-width: 600px) {
           * {
                 font-size: 10pt;
+                overflow-y: scroll;
               /*  
                 white-space: nowrap;
                 overflow-y: scroll;
