--- a/index.html
+++ b/index.html
@@ -483,6 +483,7 @@
 
                     img.src = photoData.image;
                     img.alt = photoData.timestamp;
+                    img.id = "photoId"+photoId;
 
                     div.appendChild(img);
                     div.appendChild(detailsButton);
