--- a/index.html
+++ b/index.html
@@ -176,8 +176,9 @@
         .container .overlay
         {
             position: absolute;
-            top: 0;
-            left: 10px;
+            top: 15px;
+            left: 15px;
+            font-size: 20px;
             z-index: 2;
         }
         .container .overlay h3
@@ -290,7 +291,7 @@
     </nav>
 
     <div id="HomeContent" class="tabcontent">
-        <h1>Welcome to the Plant Watering App</h1>
+        <h2>Welcome to the Plant Watering App</h2>
         <p>This app helps support plant care and reduce water waste.</p>
         <p>Developed in Summer 2025 as part of a two-week mobile app workshop.</p>
         <img src="qrcode_se4cps.github.io.png" style="width: 50%" />
@@ -311,9 +312,9 @@
         
         <canvas id="canvas" style="display:none;"></canvas>
         <img id="photo" alt="">
-        <button id="captureButton">Take Photo</button>
-        <button id="saveButton">Save Photo</button>
-        <button id="deleteButton">Delete Photo</button>
+        <button id="captureButton">Take Photo 🎥</button>
+        <button id="saveButton">Save Photo 💾</button>
+        <button id="deleteButton">Delete Photo 🗑</button>
     </div>
 
     <div id="GalleryContent" class="tabcontent">
