--- a/index.html
+++ b/index.html
@@ -1214,6 +1214,7 @@
 
                     div.appendChild(img);
                     div.appendChild(detailsButton);
+                    div.appendChild(shareButton);
                     div.appendChild(deleteButton);
 
                     deleteButton.addEventListener('click', () => {
