--- a/index.html
+++ b/index.html
@@ -1187,7 +1187,7 @@
 
                     deleteButton.innerHTML = 'Delete &#9940;';
                     detailsButton.innerHTML = 'Details &#128269;';
-                    shareButton.innerHTML = 'Share';
+                    shareButton.innerHTML = 'Share &#1F334;';
 
                     shareButton.addEventListener('click', function() {
                         let shareData = {
