--- a/index.html
+++ b/index.html
@@ -1184,6 +1184,7 @@
                     const shareButton = document.createElement('button');
 
                     deleteButton.style.backgroundColor = '#e56c6c';
+                    shareButton.style.backgroundColor = 'yellowgreen';
 
                     deleteButton.innerHTML = 'Delete &#9940;';
                     detailsButton.innerHTML = 'Details &#128269;';
