--- a/index.html
+++ b/index.html
@@ -1188,7 +1188,7 @@
 
                     deleteButton.innerHTML = 'Delete &#9940;';
                     detailsButton.innerHTML = 'Details &#128269;';
-                    shareButton.innerHTML = 'Share &#1F334;';
+                    shareButton.innerHTML = 'Share 🌴';
 
                     shareButton.addEventListener('click', function() {
                         let shareData = {
